--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@avalabs/web3-react-core-connector": "^1.1.1",
     "@metamask/sdk": "^0.2.3",
+    "@typechain/ethers-v5": "^10.2.1",
     "@web3-onboard/coinbase": "^2.2.3",
+    "@web3-onboard/core": "^2.18.0",
     "@web3-onboard/dcent": "^2.2.6",
     "@web3-onboard/fortmatic": "^2.0.18",
     "@web3-onboard/frontier": "^2.0.3",
@@ -34,8 +37,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
     "recoil": "^0.7.7",
-    "styled-components": "^6.0.0-rc.1",
-    "typechain": "^8.1.1"
+    "styled-components": "^6.0.0-rc.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
@@ -46,6 +48,7 @@
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "typechain": "^8.1.1",
     "typescript": "^5.0.2",
     "vite": "^4.3.2"
   },
